tests-trybuild/tests/riscv-rt/setup_interrupts/fail_full.stderr
error: macro arguments are not allowed
 --> tests/riscv-rt/setup_interrupts/fail_full.rs:1:34
  |
1 | #[riscv_macros::setup_interrupts(arg)]
  |                                  ^^^

error: function must be private
 --> tests/riscv-rt/setup_interrupts/fail_full.rs:2:1
  |
2 | pub const async extern "Rust" fn setup_interrupts<'a, T>(_h: u32, _d: &'a T, _v: ...) -> !
  | ^^^

error: function must not be const
 --> tests/riscv-rt/setup_interrupts/fail_full.rs:2:5
  |
2 | pub const async extern "Rust" fn setup_interrupts<'a, T>(_h: u32, _d: &'a T, _v: ...) -> !
  |     ^^^^^

error: function must not be async
 --> tests/riscv-rt/setup_interrupts/fail_full.rs:2:11
  |
2 | pub const async extern "Rust" fn setup_interrupts<'a, T>(_h: u32, _d: &'a T, _v: ...) -> !
  |           ^^^^^

error: ABI must not be specified
 --> tests/riscv-rt/setup_interrupts/fail_full.rs:2:17
  |
2 | pub const async extern "Rust" fn setup_interrupts<'a, T>(_h: u32, _d: &'a T, _v: ...) -> !
  |                 ^^^^^^

error: generics are not allowed
 --> tests/riscv-rt/setup_interrupts/fail_full.rs:2:51
  |
2 | pub const async extern "Rust" fn setup_interrupts<'a, T>(_h: u32, _d: &'a T, _v: ...) -> !
  |                                                   ^^

error: argument type must be `usize`
 --> tests/riscv-rt/setup_interrupts/fail_full.rs:2:62
  |
2 | pub const async extern "Rust" fn setup_interrupts<'a, T>(_h: u32, _d: &'a T, _v: ...) -> !
  |                                                              ^^^

error: too many input arguments
 --> tests/riscv-rt/setup_interrupts/fail_full.rs:2:67
  |
2 | pub const async extern "Rust" fn setup_interrupts<'a, T>(_h: u32, _d: &'a T, _v: ...) -> !
  |                                                                   ^^

error: variadic arguments are not allowed
 --> tests/riscv-rt/setup_interrupts/fail_full.rs:2:78
  |
2 | pub const async extern "Rust" fn setup_interrupts<'a, T>(_h: u32, _d: &'a T, _v: ...) -> !
  |                                                                              ^^

error: return type must be ()
 --> tests/riscv-rt/setup_interrupts/fail_full.rs:2:87
  |
2 | pub const async extern "Rust" fn setup_interrupts<'a, T>(_h: u32, _d: &'a T, _v: ...) -> !
  |                                                                                       ^

error: where clause is not allowed
 --> tests/riscv-rt/setup_interrupts/fail_full.rs:3:1
  |
3 | where
  | ^^^^^
